refactor: mejorar formato del recibo y manejo de nulos
- Agrega validaciones de nulos usando Objects.requireNonNull()
- Reorganiza y mejora el formato del período liquidado
- Aumenta tamaño de fuente para mejor legibilidad
- Optimiza el formato de números y fechas
- Mejora el manejo de colecciones usando getFirst()
- Reorganiza la estructura del documento para mejor presentación

Closes #29